[gd_scene load_steps=10 format=2]

[ext_resource path="res://Grids/Grid-Block.gd" type="Script" id=1]
[ext_resource path="res://Bricks/new_grid/wexler-cell.png" type="Texture" id=2]
[ext_resource path="res://Grids/animations/4.tres" type="Animation" id=3]
[ext_resource path="res://Grids/animations/0.tres" type="Animation" id=4]
[ext_resource path="res://Grids/animations/3.tres" type="Animation" id=5]
[ext_resource path="res://Grids/animations/1.tres" type="Animation" id=6]
[ext_resource path="res://Grids/animations/5.tres" type="Animation" id=7]
[ext_resource path="res://Grids/animations/6.tres" type="Animation" id=8]
[ext_resource path="res://Grids/animations/2.tres" type="Animation" id=9]

[node name="Grid-Block" type="TextureRect"]
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/0 = ExtResource( 4 )
anims/1 = ExtResource( 6 )
anims/2 = ExtResource( 9 )
anims/3 = ExtResource( 5 )
anims/4 = ExtResource( 3 )
anims/5 = ExtResource( 7 )
anims/6 = ExtResource( 8 )

[connection signal="mouse_clicked_grid" from="." to="." method="_on_GridBlock_mouse_clicked_grid"]
[connection signal="mouse_entered" from="." to="." method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TextureRect_mouse_exited"]
